Correction focus:visible on the gallery buttons

--- a/css/base/main.css
+++ b/css/base/main.css
@@ -46,3 +46,7 @@ header {
 dialog {
     border: none;
 }
+
+:focus-visible {
+    outline: none;
+}
